--- a/client/src/app/components/map/map.component.html
+++ b/client/src/app/components/map/map.component.html
@@ -1,10 +1,1 @@
-<google-map height="100vh" width="70vw" [zoom]="14.3" [center]="center">
-    <map-marker
-    #markerElem
-    *ngFor="let marker of markers"
-    [position]="marker.position"
-    [options]="marker.options"
-    (mapClick)="openInfo(markerElem)">
-  </map-marker> 
-  <map-info-window>{{infoContent}}</map-info-window>
-</google-map>
+<div #mapContainer id="map"></div>
