hardcoded values in info tables replaced with backend data

--- a/client/src/app/components/infotable/infotable.component.css
+++ b/client/src/app/components/infotable/infotable.component.css
@@ -1,9 +1,9 @@
 #movementContainer{
     width: 40vw;
-    height: 50vh;
+    min-height: 50vh;
 }
 
 #trafficLightContainer{
     width: 40vw;
-    height: 50vh;
+    min-height: 50vh;
 }
